FEAT: add install apk form-data endpoint
- update swagger api definition
- add install apk endpoint under /devices
- streaming apk to device instead of saving to file
