# lib/units/api/controllers/devices.js
@@ -18,6 +18,7 @@ const wireutil = require('../../../wire/util')
 const wirerouter = require('../../../wire/router')
 var datautil = require('../../../util/datautil')
 var syrup = require('stf-syrup')
+var fs = require('fs')
 
 /* ------------------------------------ PRIVATE FUNCTIONS ------------------------------- */
 
@@ -632,6 +633,106 @@ function lockDevice(req, res) {
     })
 }
 
+function installApk(req, res) {
+  const serials = req.swagger.params.serials.value.split(',')
+    .map(item => item.trim())
+    .filter(item => item)
+  if (!serials) {
+    res.status(400).json({
+      success: false,
+      message: 'Missing serials'
+    })
+    return
+  }
+  log.info("trying to install apk on: " + serials)
+  dbapi.loadDevices(req.user.groups.subscribed)
+    .then(function (devices) {
+      var targetDevices = serials.map(serial => _.filter(devices, { 'serial': serial })[0])
+      for (var i in targetDevices) {
+        if (!targetDevices[i]) {
+          throw Error('Device ' + serials[i] + ' not found')
+        }
+      }
+      syrup.serial()
+        .dependency(require('../adb'))
+        .define(function (options, adb) {
+          installApkThroughAdb(createStream(req), res, adb, targetDevices)
+        })
+        .consume()
+        .catch(function (err) {
+          log.error(err)
+          res.status(500).json({
+            success: false,
+            message: "Internal server error"
+          })
+        })
+    })
+    .catch(function (err) {
+      log.error(err.message)
+      res.status(500).json({
+        success: false,
+        message: 'Internal server error, ' + err.message
+      })
+    })
+}
+
+function createStream(req) {
+  var ReadableStreamBuffer = require('stream-buffers').ReadableStreamBuffer
+  var stream = new ReadableStreamBuffer({
+    chunkSize: 10 * 1024 * 1024
+  })
+  stream.put(req.files.apk.buffer)
+  stream.stop()
+  return stream
+}
+
+function installApkThroughAdb(stream, res, adb, targetDevices) {
+  adb.listDevices()
+    .then(function (allAdbDevices) {
+      log.info("adb devices")
+      log.info(allAdbDevices)
+      var adbDevices = targetDevices.map(device => allAdbDevices.filter(adbDevice => adbDevice.id === device.serial)[0])
+      for (var i in adbDevices) {
+        if (!adbDevices[i]) {
+          throw new Error("Adb access to " + targetDevices[i].serial + " unavailable")
+        }
+      }
+
+      var Passthrough = require('stream').PassThrough
+      var streams = adbDevices.map(function (device) {
+        const data = new Passthrough()
+        stream.pipe(data)
+        return {
+          device: device,
+          stream: data
+        }
+      })
+      return Promise.map(streams, function (adbStream) {
+        log.info("Installing apk now on " + adbStream.device.id)
+        return adb.install(adbStream.device.id, adbStream.stream)
+      })
+    })
+    .then(function () {
+      res.status(200).json({
+        success: true,
+        message: 'apk installed successfully'
+      })
+    })
+    .catch(function (err) {
+      log.error(err.message)
+      if (err && err.code === 'ECONNREFUSED') {
+        res.status(500).json({
+          success: false,
+          message: 'adb server unreachable'
+        })
+      } else {
+        res.status(500).json({
+          success: false,
+          message: 'Internal server error, ' + err.message
+        })
+      }
+    })
+}
 
 module.exports = {
   getDevices: getDevices
@@ -646,4 +747,5 @@ module.exports = {
 , deleteDevices: deleteDevices
 , unlockDevice: unlockDevice
 , lockDevice: lockDevice
+, installApk: installApk
 }
